--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-12T17:51:18Z</date>
+						<date>2018-10-18T19:28:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110567.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -104,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gvVfv9E/aVl1
-								xaM6qoirxQ==
+								Om+TW0rato2Z
+								sJY0II1APQ==
 								</data>
 								<key>Size</key>
-								<integer>126950</integer>
+								<integer>130832</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -124,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								k8HJM82oDM8m
-								vXzG5EFLmw==
+								gfSmi3XSVHjW
+								rFv2UUP5Ow==
 								</data>
 								<key>Size</key>
-								<integer>54872</integer>
+								<integer>57910</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
