--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/4-Call-for-Erd0151s2013R00E9nyi-Prize/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/4-Call-for-Erd0151s2013R00E9nyi-Prize/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-02T20:30:44Z</date>
+						<date>2018-10-18T19:28:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,21 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IdTuocflGUmP
-								NIPXoOm/yA==
+								AvG7Czqm8gxR
+								Y+4pgLHOIw==
 								</data>
 								<key>Size</key>
-								<integer>43119</integer>
-							</dict>
-							<key>index_files/backgroundImage_110306.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
+								<integer>43353</integer>
 							</dict>
 							<key>index_files/small_p60311_n109623.png</key>
 							<dict>
