--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-18T19:28:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110575.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -104,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								k2xW2jnLKyi0
-								i5c4vcSzdw==
+								Qz+nfoqJ+S6N
+								Qg+xyz3yMw==
 								</data>
 								<key>Size</key>
-								<integer>120598</integer>
+								<integer>128085</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -124,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y90STbu5W9X5
-								NjIwaekDUw==
+								mOoEKWKONn1K
+								JszZua4o/w==
 								</data>
 								<key>Size</key>
-								<integer>50287</integer>
+								<integer>54518</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
