--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-09T15:33:40Z</date>
+						<date>2018-10-18T19:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110731.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -204,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qR33g9qk9ALF
-								U0hMiCiRgA==
+								BmygEaUJctn6
+								k3+ZBgaH/w==
 								</data>
 								<key>Size</key>
-								<integer>138110</integer>
+								<integer>144928</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -224,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								E//GUvutCphT
-								sgD2B3hJHg==
+								kIgWq+fiKw1U
+								Y02avRVm9Q==
 								</data>
 								<key>Size</key>
-								<integer>70996</integer>
+								<integer>73631</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
