--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-10T18:17:37Z</date>
+						<date>2018-10-18T19:28:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110306.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -94,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KAzd1hj1es3v
-								jAcjaPrI9w==
+								Hhx6e7FRUapn
+								3irTjh9+1w==
 								</data>
 								<key>Size</key>
-								<integer>107824</integer>
+								<integer>107648</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
