--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T14:26:56Z</date>
+						<date>2018-10-18T19:29:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -150,6 +150,16 @@
 								<key>Size</key>
 								<integer>21870</integer>
 							</dict>
+							<key>files/stacks-image-9c884d0.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								fU/F14sAci93
+								dY+HaHVrFw==
+								</data>
+								<key>Size</key>
+								<integer>243823</integer>
+							</dict>
 							<key>files/stacks-image-ae20feb-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -210,32 +220,22 @@
 								<key>Size</key>
 								<integer>46475</integer>
 							</dict>
-							<key>files/stacks-image-f6e142c.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								fU/F14sAci93
-								dY+HaHVrFw==
-								</data>
-								<key>Size</key>
-								<integer>243823</integer>
-							</dict>
 							<key>files/stacks_page_page53.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								aQ6aZOlnM6ou
-								9h8LzgBuuQ==
+								6sP9quv/Olt6
+								rr14Y8zBlQ==
 								</data>
 								<key>Size</key>
-								<integer>157154</integer>
+								<integer>157651</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ItB8tFdfseG+
-								Syp8KqvUmw==
+								3cKsdj2c5riZ
+								Wc90oUkwxg==
 								</data>
 								<key>Size</key>
 								<integer>26207</integer>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qEjNC/wc0Ev2
-								UE7I02Rn/w==
+								sjBMm/lBFsr6
+								/Q2mOJ6MVw==
 								</data>
 								<key>Size</key>
-								<integer>88760</integer>
+								<integer>88766</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
