--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:28:12Z</date>
+						<date>2018-10-18T20:59:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7F0kvQN9un2y
-								arU5mp4ikg==
+								HnxPFrZeBeHY
+								aKlBm/jimw==
 								</data>
 								<key>Size</key>
-								<integer>133937</integer>
+								<integer>133874</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
