--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:28:12Z</date>
+						<date>2018-10-18T20:59:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Hhx6e7FRUapn
-								3irTjh9+1w==
+								w7CA/S24g62F
+								4lit3lRUuQ==
 								</data>
 								<key>Size</key>
-								<integer>107648</integer>
+								<integer>107585</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
