Added Sam NetSci
Added Sam NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6912,7 +6912,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:29:43Z</date>
+						<date>2018-10-18T21:11:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6926,6 +6926,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-0a2e163-328x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5/GBFUFgVQrE
+								kLJbE+5zdg==
+								</data>
+								<key>Size</key>
+								<integer>43545</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -7101,31 +7111,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6sP9quv/Olt6
-								rr14Y8zBlQ==
+								LgghNeJtRf9k
+								XLjCHqYgfQ==
 								</data>
 								<key>Size</key>
-								<integer>157651</integer>
+								<integer>160443</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3cKsdj2c5riZ
-								Wc90oUkwxg==
+								1KXFcmsFz6Ci
+								BEW5Lwgb1Q==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>26389</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								sjBMm/lBFsr6
-								/Q2mOJ6MVw==
+								g+VNrETUeoB3
+								HEIjPnqXLw==
 								</data>
 								<key>Size</key>
-								<integer>88766</integer>
+								<integer>91946</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7512,7 +7522,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:35:10Z</date>
+						<date>2018-10-18T21:11:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7526,6 +7536,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-0a2e163-328x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5/GBFUFgVQrE
+								kLJbE+5zdg==
+								</data>
+								<key>Size</key>
+								<integer>43545</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -7671,31 +7691,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BmygEaUJctn6
-								k3+ZBgaH/w==
+								+kAYPEQdGJpC
+								rD6/l8ZBJg==
 								</data>
 								<key>Size</key>
-								<integer>144928</integer>
+								<integer>147720</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8r9BvOch9I4u
-								CPt//yc+yw==
+								pI5NH38xphmN
+								OUM7uYrdpg==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>26389</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kIgWq+fiKw1U
-								Y02avRVm9Q==
+								rNMyhiClQQF3
+								TGR29ojMQw==
 								</data>
 								<key>Size</key>
-								<integer>73631</integer>
+								<integer>76811</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10801,7 +10821,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAvJXSNLZSgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAvJc50pWegAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10812,7 +10832,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC8ldI0ug+A
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcC8lznSmVuA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
