--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-18T19:35:10Z</date>
+						<date>2018-10-18T21:11:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -49,6 +49,16 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-0a2e163-328x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5/GBFUFgVQrE
+								kLJbE+5zdg==
+								</data>
+								<key>Size</key>
+								<integer>43545</integer>
 							</dict>
 							<key>files/stacks-image-1500267-332x498.jpg</key>
 							<dict>
@@ -194,31 +204,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BmygEaUJctn6
-								k3+ZBgaH/w==
+								+kAYPEQdGJpC
+								rD6/l8ZBJg==
 								</data>
 								<key>Size</key>
-								<integer>144928</integer>
+								<integer>147720</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8r9BvOch9I4u
-								CPt//yc+yw==
+								pI5NH38xphmN
+								OUM7uYrdpg==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>26389</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kIgWq+fiKw1U
-								Y02avRVm9Q==
+								rNMyhiClQQF3
+								TGR29ojMQw==
 								</data>
 								<key>Size</key>
-								<integer>73631</integer>
+								<integer>76811</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
